--- a/django_and_react/apps/react/templates/react/index.html
+++ b/django_and_react/apps/react/templates/react/index.html
@@ -8,6 +8,11 @@
     <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css"/>
     <title>Strive</title>
+    <style>
+      .expired {
+        color:red
+      }
+    </style>
   </head>
   <body>
     {% csrf_token %}
