Added profile picture and fixed an edit form bug

--- a/django_and_react/apps/react/templates/react/index.html
+++ b/django_and_react/apps/react/templates/react/index.html
@@ -12,6 +12,12 @@
       .expired {
         color:red
       }
+      .picture-option {
+        height: 150px;
+      }
+      .picture-option-selected {
+        border:2px solid red;
+      }
     </style>
   </head>
   <body>
