--- a/django_and_react/apps/react/templates/react/index.html
+++ b/django_and_react/apps/react/templates/react/index.html
@@ -4,13 +4,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato" rel="stylesheet">
     <title>Strive</title>
   </head>
   <body>
     {% csrf_token %}
-    <div class="container" id="container">
+    <div id="container">
 
     </div>
     {% render_bundle 'main' %}
