--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -10,6 +10,7 @@ $orange-color: #E0A025;
 $gold-color: #F4D00C;
 $nav-link: #DDDDDD;
 $nav-active: #FFFFFF;
+$bright-blue: #4080FF;
 
 // === LAYOUT ===
 $nav-height: 40px;
