--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -218,6 +218,7 @@ body {
 .card {
   text-align: center;
   height: 500px;
+  border-radius: 10px;
   img {
     height: 225px;
     max-width: 225px;
@@ -232,6 +233,7 @@ body {
     text-align: center;
     width: 100%;
     vertical-align: middle;
+    border-radius: 10px;
     p {
       height: 75px;
     }
