completed accepting/denying requests, added animation

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -15,3 +15,7 @@ $bright-blue: #4080FF;
 // === LAYOUT ===
 $nav-height: 40px;
 $nav-form-height: 25px;
+$small-picture: 150px;
+
+// === OTHER ===
+$list-shadow: 2px 2px 2px #CCC;
