wagers cannot be 0 or negative, fixed precision on task points, fixed some styling

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -361,7 +361,7 @@ body {
 .react-tabs {
   background-color: #FFF;
   border-radius: 5px;
-  width: 90vw;
+  width: 100%;
   overflow-x: scroll;
 }
 
