--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -49,7 +49,9 @@ body {
 }
 
 .navbar-toggle {
-  margin: 3px 5px 2px 0px;
+  color: #FFF;
+  padding: 3px 5px;
+  margin: 4px 5px 2px 0px;
 }
 
 .navbar-nav >li > a {
@@ -252,9 +254,10 @@ body {
   margin-right: 15px;
   display: inline-block;
   width: 210px;
-  @media(max-width: 767px) {
+  @media(max-width: 991px) {
     width: 100%;
     display: block;
+    margin-top: 15px;
   }
 }
 
@@ -268,7 +271,7 @@ body {
 } 
 
 ::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
+  background-color: #777;
   outline: 1px solid slategrey;
 } 
 
@@ -279,7 +282,7 @@ body {
   background-color: #DDD;
   border-radius: 5px;
   width: 210px;
-  @media(max-width: 767px) {
+  @media(max-width: 991px) {
     height: 89px;
     width: 100%;
     overflow-x: auto;
@@ -295,7 +298,7 @@ body {
   box-shadow: 2px 2px 2px #AAA;
   cursor: pointer;
   
-  @media(max-width: 767px) {
+  @media(max-width: 991px) {
     display: inline-block;
     text-align: center;
     width: 250px;
@@ -303,7 +306,7 @@ body {
 }
 
 .list-group-item {
-  @media(max-width: 767px) {
+  @media(max-width: 991px) {
     display: inline-block;
     text-align: center;
   }
@@ -320,12 +323,15 @@ body {
   height: 460px;
   display: inline-block;
   width: calc(100% - 225px);
-  overflow-x: auto;
-  @media(max-width: 767px) {
+  @media(max-width: 991px) {
     margin-top: 15px;
     display: block;
     width: 100%;
   }
+}
+
+.graph-instructions { 
+  text-align: center;
 }
 
 .tiny-avatar {
@@ -429,6 +435,7 @@ body {
 .request-list {
   box-shadow: $list-shadow;
   margin-bottom: 5px;
+  width: 100%;
 }
 
 .home-header, .profile-header {
@@ -438,7 +445,7 @@ body {
 .profile-header {
   min-height: 166px;
   @media(max-width: 767px) {
-    min-height: 320px;
+    min-height: 433px;
   }
 }
 
@@ -448,19 +455,6 @@ body {
   @media(max-width:767px) {
     margin: 0 auto 15px;
   }
-}
-
-.react-tabs [role=tab] {
-  border: 1px solid rgba(200, 200, 200, 0.5);
-  border-bottom: 0;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-}
-
-.react-tabs {
-  background-color: #FFF;
-  border-radius: 5px;
-  width: 100%;
 }
 
 .friend-placeholder {
@@ -523,4 +517,103 @@ body {
 //     padding-left: 5px;
 //   }
 // }
+
+.ReactTabs__TabPanel--selected {
+  padding: 15px 0;
+  border: 1px solid #AAA;
+  border-radius: 0px 0px 5px 5px;
+  border-top: 0px;
+  overflow-x: auto;
+  text-align: center;
+}
+
+
+
+.react-tabs [role=tablist] {
+  height: 38px;
+  margin: 0 auto;
+}
+
+// .react-tabs {
+//   background-color: #FFF;
+//   border-radius: 5px;
+//   width: 100%;
+// }
+
+// .ReactTabs .react-tabs {
+//   padding: 10px;
+//   border: 1px solid #AAA;
+//   border-radius: 0px 0px 5px 5px;
+//   border-top: 0px;
+// }
+
+
+// .react-tabs [role=tab][aria-selected=true] {
+//   background: #AAA;
+//   border-bottom: none;
+// }
+
+// .ReactTabs__TabPanel--selected [role=tabpanel] {
+//   padding: 5px;
+//   border: 1px solid #AAA;
+//   border-radius: 0px 0px 5px 5px;
+//   border-top: 0px;
+// }
+
+.react-tabs [role=tab] {
+  border: 1px solid rgba(200, 200, 200, 0.5);
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom: none;
+}
+
+.body-section {
+  margin-top: 15px;
+}
+
+.nav-pills {
+  margin-bottom: 15px;
+
+  li.active {
+    a {
+      background-color: $tertiary-color;
+      &:hover, &:focus {
+        background-color: $tertiary-color;
+      }
+    }
+  }
+
+  .nav-pill {
+    font-size: .9em;
+    a {
+      background-color: $secondary-color;
+      color: #FFF;
+      margin: 1px;
+      padding: 10px 5px;
+      &:hover {
+        background-color: $tertiary-color;
+      }
+    }
+    @media(max-width: 767px) {
+      width: 50%;
+      margin: 0px;
+      display: inline-block;
+    }
+  }
+}
+
+.recharts-wrapper {
+  margin: 0 auto;
+  width: 100% !important;
+  height: 100% !important;
+  margin-left: -10px;
+  svg {
+      width: 100% !important;
+      height: 100%;
+  }
+}
+
+.login-form { 
+  margin-bottom: 15px;
+}
 
