--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -6,6 +6,7 @@ h1, h2, h3, h4, .navbar{
 
 body {
   font-family: $text-font;
+  background-color: #F2F2F2;
 }
 
 .nav-buttons {
@@ -316,10 +317,19 @@ body {
 
 .friend-display {
   padding: 15px;
-  background-color: #F2F2F2;
+  background-color: #FFF;
   border-radius: 5px;
   overflow-x: auto;
-  height: 100%
+  height: 100%;
+  border: 1px solid $nav-link;
+
+  .react-tabs {
+    .ReactTabs__TabPanel--selected {
+      // background-color: white;
+      height: 295px;
+      overflow-y: auto;
+    }
+  }
 }
 
 .graph-section {
@@ -480,6 +490,8 @@ body {
   border-radius: .25rem;
   min-height: 71px;
   padding-top: 10px;
+  background-color: #FFF;
+
   @media(max-width: 767px) {
     padding-left: 0;
     margin: 15px .9375rem;
@@ -491,6 +503,8 @@ body {
   border-radius: .25rem;
   min-height: 140px;
   padding-top: 10px;
+  background-color: #FFF;
+
   @media(max-width: 767px) {
     margin: 15px 0px;
   }
@@ -528,6 +542,7 @@ body {
   border-top: 0px;
   overflow-x: auto;
   text-align: center;
+  background-color: #FFF;
 }
 
 
@@ -562,16 +577,6 @@ body {
 //   border-radius: 0px 0px 5px 5px;
 //   border-top: 0px;
 // }
-
-.friend-display {
-  .react-tabs {
-    .ReactTabs__TabPanel--selected {
-      background-color: white;
-      height: 295px;
-      overflow-y: auto;
-    }
-  }
-}
 
 .react-tabs [role=tab]:focus:after {
   left: 0px;
@@ -661,6 +666,35 @@ body {
       vertical-align: middle;
       margin-bottom: 0px;
     }
+  }
+
+}
+
+.home-body {
+  margin-right: -.9375rem;
+  margin-left: -.9375rem;
+}
+.home-tasks {
+  width: 33.33333333%;
+  display: inline-block;
+  vertical-align: top;
+  padding-right: .9375rem;
+  padding-left: .9375rem;
+
+  @media (max-width: 767px) {
+    width: 100%;
+  }
+}
+
+.home-feed {
+  width: 66.666667%;
+  display: inline-block;
+
+  @media (max-width: 767px) {
+    margin-top: 30px;
+    width: 100%;
+    padding-right: .9375rem;
+    padding-left: .9375rem;
   }
 
 }
